implemented authget & authdelete
