# database/src/api/mod.rs
@@ -34,41 +34,64 @@ impl LTZFServer {
 #[allow(unused_variables)]
 #[async_trait]
 impl openapi::apis::default::Default for LTZFServer {
-    type Claims = auth::APIScope;
+    type Claims = (auth::APIScope, i32);
 
-    async fn api_v1_auth_put(
+    #[doc = "AuthGet - GET /api/v1/auth"]
+    #[must_use]
+    #[allow(clippy::type_complexity, clippy::type_repetition_in_bounds)]
+    async fn auth_get(
         &self,
         method: Method,
         host: Host,
         cookies: CookieJar,
         claims: Self::Claims,
         body: models::CreateApiKey,
-    ) -> Result<ApiV1AuthPutResponse, ()> {
-        todo!()
+    ) -> Result<AuthGetResponse, ()> {
+        if claims.0 != auth::APIScope::KeyAdder {
+            return Ok(AuthGetResponse::Status401_APIKeyIsMissingOrInvalid { www_authenticate: None })
+        }
+        let key = auth::auth_get(self, body.scope.try_into().unwrap(), body.expires_at.map(|x| x.naive_utc()), claims.1).await;
+        match key{
+            Ok(key) => {return Ok(AuthGetResponse::Status201_APIKeyWasCreatedSuccessfully(key))}
+            Err(e) =>{
+                tracing::error!("{}", e.to_string());
+                return Ok(AuthGetResponse::Status500_InternalServerError);
+            }
+        }
     }
 
-    async fn api_v1_auth_delete(
+    #[doc = "AuthDelete - DELETE /api/v1/auth"]
+    #[must_use]
+    #[allow(clippy::type_complexity, clippy::type_repetition_in_bounds)]
+    async fn auth_delete(
         &self,
         method: Method,
         host: Host,
         cookies: CookieJar,
         claims: Self::Claims,
-        header_params: models::ApiV1AuthDeleteHeaderParams,
-    ) -> Result<ApiV1AuthDeleteResponse, ()> {
-        todo!()
+        body: String,
+    ) -> Result<AuthDeleteResponse, ()> {
+        let ret = auth::auth_delete(self, claims.0, &body).await;
+        match ret {
+            Ok(x) => {return Ok(x)},
+            Err(e) => {
+                tracing::error!("{}", e.to_string());
+                Err(())
+            }
+        }
     }
 
-    #[doc = " ApiV1GesetzesvorhabenGesvhIdGet - GET /api/v1/gesetzesvorhaben/{gsvh_id}"]
+    #[doc = "GsvhGetById - GET /api/v1/gesetzesvorhaben/{gsvh_id}"]
     #[must_use]
     #[allow(clippy::type_complexity, clippy::type_repetition_in_bounds)]
-    async fn api_v1_gesetzesvorhaben_gsvh_id_get(
+    async fn gsvh_get_by_id(
         &self,
         method: Method,
         host: Host,
         cookies: CookieJar,
-          header_params: models::ApiV1GesetzesvorhabenGsvhIdGetHeaderParams,
-          path_params: models::ApiV1GesetzesvorhabenGsvhIdGetPathParams,
-        ) -> Result<ApiV1GesetzesvorhabenGsvhIdGetResponse, ()> {
+          header_params: models::GsvhGetByIdHeaderParams,
+          path_params: models::GsvhGetByIdPathParams,
+        ) -> Result<GsvhGetByIdResponse, ()> {
         tracing::info!(
             "Get By ID endpoint called with ID: {}",
             path_params.gsvh_id
@@ -77,14 +100,14 @@ impl openapi::apis::default::Default for LTZFServer {
 
         match gsvh {
             Ok(gsvh) => {
-                Ok(ApiV1GesetzesvorhabenGsvhIdGetResponse::Status200_SuccessfulOperation(gsvh))
+                Ok(GsvhGetByIdResponse::Status200_SuccessfulOperation(gsvh))
             }
             Err(e) => {
                 tracing::warn!("{}", e.to_string());
                 match e {
                     LTZFError::Database{source: DatabaseError::Operation{source: diesel::result::Error::NotFound}} => {
                         tracing::warn!("Not Found Error: {:?}", e.to_string());
-                        Ok(ApiV1GesetzesvorhabenGsvhIdGetResponse::Status404_ContentNotFound)
+                        Ok(GsvhGetByIdResponse::Status404_ContentNotFound)
                     }
                     _ => Err(()),
                 }
@@ -92,18 +115,18 @@ impl openapi::apis::default::Default for LTZFServer {
         }
     }
 
-    #[doc = " ApiV1GesetzesvorhabenGet - GET /api/v1/gesetzesvorhaben"]
+    #[doc = " GsvhGet - GET /api/v1/gesetzesvorhaben"]
     #[must_use]
     #[allow(clippy::type_complexity, clippy::type_repetition_in_bounds)]
-    async fn api_v1_gesetzesvorhaben_gsvh_id_put(
+    async fn gsvh_put(
             &self,
             method: Method,
             host: Host,
             cookies: CookieJar,
             claims: Self::Claims,
-            path_params: models::ApiV1GesetzesvorhabenGsvhIdPutPathParams,
+            path_params: models::GsvhPutPathParams,
             body: models::Gesetzesvorhaben,
-        ) -> Result<ApiV1GesetzesvorhabenGsvhIdPutResponse, ()> {
+        ) -> Result<GsvhPutResponse, ()> {
             tracing::trace!("api_v1_gesetzesvorhaben_gsvh_id_put Called with path params: `{:?}`", path_params);
             let out = put::api_v1_gesetzesvorhaben_gsvh_id_put(self, path_params, body)
             .await
@@ -111,23 +134,23 @@ impl openapi::apis::default::Default for LTZFServer {
             Ok(out)
         }
 
-    #[doc = " ApiV1GesetzesvorhabenGet - GET /api/v1/gesetzesvorhaben"]
+    #[doc = " GsvhGet - GET /api/v1/gesetzesvorhaben"]
     #[must_use]
     #[allow(clippy::type_complexity, clippy::type_repetition_in_bounds)]
-    async fn api_v1_gesetzesvorhaben_get(
+    async fn gsvh_get(
             &self,
             method: Method,
             host: Host,
             cookies: CookieJar,
-            query_params: models::ApiV1GesetzesvorhabenGetQueryParams,
-        ) -> Result<ApiV1GesetzesvorhabenGetResponse, ()> {
+            query_params: models::GsvhGetQueryParams,
+        ) -> Result<GsvhGetResponse, ()> {
         tracing::trace!(
             "GET GSVHByParam endpoint called with query params: {:?}",
             query_params
         );
         match get::api_v1_gesetzesvorhaben_get(self, query_params).await {
-            Ok(models::Response{payload: None}) => Ok(ApiV1GesetzesvorhabenGetResponse::Status204_NoContentFoundForTheSpecifiedParameters),
-            Ok(x) => Ok(ApiV1GesetzesvorhabenGetResponse::Status200_SuccessfulOperation(x)),
+            Ok(models::Response{payload: None}) => Ok(GsvhGetResponse::Status204_NoContentFoundForTheSpecifiedParameters),
+            Ok(x) => Ok(GsvhGetResponse::Status200_SuccessfulOperation(x)),
             Err(e) => {
                 tracing::warn!("{}", e.to_string());
                 Err(())
@@ -138,21 +161,21 @@ impl openapi::apis::default::Default for LTZFServer {
     #[doc = " ApiV1GesetzesvorhabenPost - POST /api/v1/gesetzesvorhaben"]
     #[must_use]
     #[allow(clippy::type_complexity, clippy::type_repetition_in_bounds)]
-    async fn api_v1_gesetzesvorhaben_post(
+    async fn gsvh_post(
         &self,
         method: Method,
         host: Host,
         cookies: CookieJar,
             claims: Self::Claims,
-          query_params: models::ApiV1GesetzesvorhabenPostQueryParams,
+          query_params: models::GsvhPostQueryParams,
                 body: models::Gesetzesvorhaben,
-        ) -> Result<ApiV1GesetzesvorhabenPostResponse, ()> {
+        ) -> Result<GsvhPostResponse, ()> {
         tracing::trace!("api_v1_gesetzesvorhaben_post called by {:?}", query_params);
 
         let rval = post::api_v1_gesetzesvorhaben_post(self, body).await;
         match rval {
             Ok(_) => {
-                Ok(ApiV1GesetzesvorhabenPostResponse::Status201_SuccessfullyIntegratedTheObject)
+                Ok(GsvhPostResponse::Status201_SuccessfullyIntegratedTheObject)
             }
             Err(e) => {
                 tracing::warn!("Error Occurred and Is Returned: {:?}", e.to_string());
@@ -165,14 +188,14 @@ impl openapi::apis::default::Default for LTZFServer {
                             "Unique Violation Error (Conflict on Input Data): {:?}",
                             info
                         );
-                        Ok(ApiV1GesetzesvorhabenPostResponse::Status409_Conflict)
+                        Ok(GsvhPostResponse::Status409_Conflict)
                     },
                     LTZFError::Validation{source: DataValidationError::DuplicateApiId{id}} => {
                         tracing::warn!("ApiID Equal Error: {:?}", id);
-                        Ok(ApiV1GesetzesvorhabenPostResponse::Status409_Conflict)
+                        Ok(GsvhPostResponse::Status409_Conflict)
                     },
                     LTZFError::Validation{source: DataValidationError::AmbiguousMatch{..}} =>{
-                        Ok(ApiV1GesetzesvorhabenPostResponse::Status409_Conflict)
+                        Ok(GsvhPostResponse::Status409_Conflict)
                     }
                     _ => {
                         Err(())
