# docs/specs/openapi.yml
@@ -5,6 +5,7 @@ info:
 paths:
   /api/v1/gesetzesvorhaben/{gsvh_id}:
     get:
+      operationId: "gsvh_get_by_id"
       description: "Returns a Gesetzesvorhaben by id"
       parameters:
         - name: "gsvh_id"
@@ -33,6 +34,7 @@ paths:
         "500":
           description: "Internal Server Error"
     put:
+      operationId: "gsvh_put"
       description: API Access for the Admins without the merge just replacing gsvh
       parameters:
         - name: "gsvh_id"
@@ -59,6 +61,7 @@ paths:
         - apiKey: [] 
   /api/v1/gesetzesvorhaben:
     get:
+      operationId: "gsvh_get"
       description: "Returns a filtered List of Gesetzesvorhaben"
       responses:
         "200":
@@ -110,6 +113,7 @@ paths:
           schema:
             $ref: "#/components/schemas/gesetzestyp"
     post:
+      operationId: "gsvh_post"
       description: "Pushing a new Gesetzesvorhaben"
       requestBody:
         required: true
@@ -139,25 +143,28 @@ paths:
         - apiKey: []
   /api/v1/auth:
     delete:
+      operationId: "auth_delete"
       description: "Deletes an API Key from the Database"
-      parameters:
-        - name: "api-key"
-          in: header
-          required: true
-          schema:
-            type: string
-            description: "The API Key used to authenticate/authorize the request"
+      requestBody:
+        required: true
+        content:
+          text/plain: 
+            schema:
+              type: "string"
+              description: "The API Key to be deleted"
       responses:
         "204":
           description: "API Key was deleted successfully"
         "401":
           $ref: "#/components/responses/UnauthorizedError"
+        "404":
+          description: "API Key not found"
         "500":
           description: "Internal Server Error"
       security:
         - apiKey: [] 
-    
-    put:
+    get:
+      operationId: "auth_get"
       description: "Adds a new API Key to the Database"
       requestBody:
         required: true
